Fixed spacing, added order for different viewports, changed button design for smaller viewports

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,9 @@ html, body {
 	height:100%
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 1024px) {
 	html {
-		font-size:1rem;
+		font-size:0.9rem;
 	}
 
 	.container {
@@ -20,13 +20,13 @@ html, body {
 	}
 }
 
-@media screen and (max-width: 766px) {
+@media screen and (max-width: 1023px) {
 	html {
-		font-size:0.8rem;
+		font-size:0.7rem;
 	}
 
 	.container {	
-		width:60%;
+		width:50%;
 	}
 }
 
@@ -36,7 +36,6 @@ html, body {
 	padding-right:0;
 	min-height:100%;
 }
-
 .mini-header {
 	background-color:#EFEFEF;
 	width:100%;
@@ -47,7 +46,7 @@ html, body {
 	background-color:#706C61;
 }
 
-.col-block {
+.tile {
 	background-color:#FFFFFF;
 }
 
@@ -58,8 +57,7 @@ html, body {
 
 .top-header {
 	background-color:#706C61;
-	min-height:3rem;
-	margin-top:10%; 	
+	min-height:3rem; 	
 }
 
 .carousel-caption > h5, .carousel-caption > p {
@@ -73,10 +71,6 @@ html, body {
 .nav-item > .active {
 	border-bottom:solid;
 	border-bottom-color:#EFEFEF;
-}
-
-.nav-link {
-	color:#000000;
 }
 
 .nav-foot {
@@ -93,19 +87,14 @@ ul {
 	list-style-type:none;
 }
 
-.nav-button {
-	color:#EFEFEF;
-	background-color:#706C61;	
+#active-button {
+	background-color:#524F47;
+	border-color:#524F47;	
 }
 
-.btn-dark {
+.btn-secondary {
 	background-color:#706C61;
 	border-color:#706C61;
-}
-
-.text {	
-	display:flex;
-	align-items:center;
 }
 
 .input-group-text {
